// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress demo snapshot > Progress demo snapshot 0 1`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={40}
  className="bui-progress"
  role="progressbar"
>
  <div
    className="bui-progress-inner"
    style={
      {
        "background": undefined,
      }
    }
  >
    <div
      className="bui-progress-bg"
      style={
        {
          "background": undefined,
          "height": undefined,
          "width": "40%",
        }
      }
    />
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "5px",
    }
  }
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={40}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": "var(--bui-color-primary)",
            "height": undefined,
            "width": "40%",
          }
        }
      />
    </div>
  </div>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": "var(--bui-color-info)",
            "height": undefined,
            "width": "50%",
          }
        }
      />
    </div>
  </div>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={30}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": "var(--bui-color-success)",
            "height": undefined,
            "width": "30%",
          }
        }
      />
    </div>
  </div>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={80}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": "var(--bui-color-warning)",
            "height": undefined,
            "width": "80%",
          }
        }
      />
    </div>
  </div>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={90}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": "var(--bui-color-vip)",
            "height": undefined,
            "width": "90%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "flex-start",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
    }
  }
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={60}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": "var(--bui-color-warning)",
            "height": 10,
            "width": "60%",
          }
        }
      />
    </div>
  </div>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={60}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": "var(--bui-color-warning)",
            "height": 15,
            "width": "60%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "flex-start",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
    }
  }
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={60}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "backgroundImage": "linear-gradient(to right, var(--bui-color-primary), var(--bui-color-primary-light))",
            "height": undefined,
            "width": "60%",
          }
        }
      />
    </div>
  </div>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={90}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "backgroundImage": "linear-gradient(to right, var(--bui-color-orange) 0%, var(--bui-color-orange-light) 100%)",
            "height": undefined,
            "width": "90%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 5`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={60}
  className="bui-progress"
  role="progressbar"
>
  <div
    className="bui-progress-inner"
    style={
      {
        "background": "var(--bui-color-primary-light)",
      }
    }
  >
    <div
      className="bui-progress-bg"
      style={
        {
          "background": undefined,
          "height": undefined,
          "width": "60%",
        }
      }
    />
  </div>
</div>
`;

exports[`Progress demo snapshot > Progress demo snapshot 0 6`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
    }
  }
>
  <div
    aria-label="文件下载进度"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": undefined,
            "height": undefined,
            "width": "50%",
          }
        }
      />
    </div>
  </div>
  <div
    aria-label="数据加载进度"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={75}
    aria-valuetext="已完成75%"
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": undefined,
            "height": undefined,
            "width": "75%",
          }
        }
      />
    </div>
  </div>
  <div
    aria-describedby="progress-description"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={30}
    className="bui-progress"
    role="progressbar"
  >
    <div
      className="bui-progress-inner"
      style={
        {
          "background": undefined,
        }
      }
    >
      <div
        className="bui-progress-bg"
        style={
          {
            "background": undefined,
            "height": undefined,
            "width": "30%",
          }
        }
      />
    </div>
  </div>
  <span
    id="progress-description"
    style={
      {
        "display": "none",
      }
    }
  >
    这是进度条的详细描述信息
  </span>
</div>
`;
